2002-05-11  Bruno Haible  <bruno@clisp.org>

	* dwarf2dbg.c (dwarf2_emit_insn): Use the 'current' struct filled
	by dwarf2_directive_loc, instead of calling dwarf2_where.

2002-05-11  Kazu Hirata  <kazu@cs.umass.edu>

	* config/obj-coff.h: Fix formatting.
	* config/tc-mcore.c: Likewise.
	* config/tc-mn10300.c: Likewise.
	* config/tc-openrisc.c: Likewise.
	* config/tc-or32.c: Likewise.
	* config/tc-pdp11.c: Likewise.
	* config/tc-ppc.c: Likewise.
	* config/tc-ppc.h: Likewise.
	* config/tc-sh64.c: Likewise.
	* config/tc-sh.c: Likewise.
	* config/tc-tic54x.c: Likewise.
	* config/tc-xstormy16.c: Likewise.
	* config/tc-xstormy16.h: Likewise.

2002-05-09  Kazu Hirata  <kazu@cs.umass.edu>

	* config/obj-coff.c: Fix formatting.
	* config/obj-elf.c: Likewise.
	* config/tc-alpha.c: Likewise.
	* config/tc-arm.c: Likewise.
	* config/tc-d10v.c: Likewise.
	* config/tc-d30v.c: Likewise.
	* config/tc-h8300.c: Likewise.
	* config/tc-hppa.c: Likewise.

2002-05-09  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (md_estimate_size_before_relax) Don't lose
	reloc when no_cond_jump_promotion.

2002-05-08  Jim Wilson  <wilson@redhat.com>

	* config/tc-i960.c (md_estimate_size_before_relax): Return size of
	current variable part of frag.

2002-05-08  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mmix.c: Fix formatting.
	* config/tc-mmix.h: Likewise.

2002-05-08  Alan Modra  <amodra@bigpond.net.au>

	* configure: Regenerate.

2002-05-07  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-m68k.c: Fix formatting.

2002-05-07  Federico G. Schwindt <fgsch@olimpo.com.br>

	* Makefile.am: Honour DESTDIR.
	* Makefile.in: Regenerate.

2002-05-06  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-ia64.c: Fix formatting.
	* config/tc-ia64.h: Likewise.

2002-05-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mips.c: Fix formatting.
	* config/tc-s390.c: Likewise.
	* config/tc-s390.h: Likewise.

2002-05-03  Alexandre Oliva  <aoliva@redhat.com>
