@@ -1,3 +1,9 @@
+2002-05-11  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/tc-sh.c (md_pcrel_from): Define for use with sh-hms
+	target.
+	(md_pcrel_from_section): Use md_pcrel_from().
+
 2002-05-11  Bruno Haible  <bruno@clisp.org>
 
 	* dwarf2dbg.c (dwarf2_emit_insn): Use the 'current' struct filled
